--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -21,9 +21,12 @@ Mcu.Package=UFQFPN32
 Mcu.Pin0=PB0
 Mcu.Pin1=PA11
 Mcu.Pin2=PA12
-Mcu.Pin3=VP_SYS_VS_Systick
-Mcu.Pin4=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=5
+Mcu.Pin3=PA13 (JTMS-SWDIO)
+Mcu.Pin4=PA14 (JTCK-SWCLK)
+Mcu.Pin5=PB3 (JTDO-TRACESWO)
+Mcu.Pin6=VP_SYS_VS_Systick
+Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=8
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -44,9 +47,15 @@ PA11.Mode=CAN_Activate
 PA11.Signal=CAN1_RX
 PA12.Mode=CAN_Activate
 PA12.Signal=CAN1_TX
+PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
+PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
+PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
+PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
 PB0.Locked=true
 PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
+PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
+PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -78,7 +87,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.FamilyName=M
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
