Changed timer channel and set up DMA

--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -6,33 +6,47 @@ CAN1.CalculateBaudRate=83333
 CAN1.CalculateTimeBit=12000
 CAN1.CalculateTimeQuantum=4000.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
+Dma.Request0=TIM1_CH2
+Dma.RequestsNb=1
+Dma.TIM1_CH2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM1_CH2.0.Instance=DMA1_Channel3
+Dma.TIM1_CH2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.TIM1_CH2.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM1_CH2.0.Mode=DMA_CIRCULAR
+Dma.TIM1_CH2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.TIM1_CH2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_LOW
+Dma.TIM1_CH2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KCU6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IPNb=5
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IPNb=6
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PB0
-Mcu.Pin1=PA11
-Mcu.Pin2=PA12
-Mcu.Pin3=PA13 (JTMS-SWDIO)
-Mcu.Pin4=PA14 (JTCK-SWCLK)
-Mcu.Pin5=PB3 (JTDO-TRACESWO)
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin1=PA9
+Mcu.Pin2=PA11
+Mcu.Pin3=PA12
+Mcu.Pin4=PA13 (JTMS-SWDIO)
+Mcu.Pin5=PA14 (JTCK-SWCLK)
+Mcu.Pin6=PB3 (JTDO-TRACESWO)
+Mcu.Pin7=VP_SYS_VS_Systick
+Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -51,8 +65,8 @@ PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PA9.Signal=S_TIM1_CH2
 PB0.Locked=true
-PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
 PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
@@ -87,7 +101,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.FamilyName=M
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
@@ -107,8 +121,10 @@ RCC.SAI1Freq_Value=4571428.571428572
 RCC.VCOInputFreq_Value=4000000
 RCC.VCOOutputFreq_Value=32000000
 RCC.VCOSAI1OutputFreq_Value=32000000
-TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2N
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Channel-PWM Generation2 CH2
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
