--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -2,31 +2,24 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-CAN1.CalculateBaudRate=83333
-CAN1.CalculateTimeBit=12000
-CAN1.CalculateTimeQuantum=4000.0
-CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KCU6
 Mcu.Family=STM32L4
-Mcu.IP0=CAN1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IPNb=5
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP2=SYS
+Mcu.IP3=TIM1
+Mcu.IPNb=4
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
-Mcu.Pin0=PB0
-Mcu.Pin1=PA11
-Mcu.Pin2=PA12
-Mcu.Pin3=PA13 (JTMS-SWDIO)
-Mcu.Pin4=PA14 (JTCK-SWCLK)
-Mcu.Pin5=PB3 (JTDO-TRACESWO)
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=8
+Mcu.Pin0=PA9
+Mcu.Pin1=PA13 (JTMS-SWDIO)
+Mcu.Pin2=PA14 (JTCK-SWCLK)
+Mcu.Pin3=PB3 (JTDO-TRACESWO)
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -43,17 +36,12 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA11.Mode=CAN_Activate
-PA11.Signal=CAN1_RX
-PA12.Mode=CAN_Activate
-PA12.Signal=CAN1_TX
 PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
-PB0.Locked=true
-PB0.Mode=PWM Generation2 CH2N
-PB0.Signal=TIM1_CH2N
+PA9.Locked=true
+PA9.Signal=GPIO_Output
 PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PinOutPanel.RotationAngle=0
@@ -88,27 +76,53 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
+RCC.ADCFreq_Value=64000000
+RCC.AHBFreq_Value=48000000
+RCC.APB1Freq_Value=48000000
+RCC.APB1TimFreq_Value=48000000
+RCC.APB2Freq_Value=48000000
+RCC.APB2TimFreq_Value=48000000
+RCC.CortexFreq_Value=48000000
+RCC.FCLKCortexFreq_Value=48000000
 RCC.FamilyName=M
+RCC.HCLKFreq_Value=48000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.IPParameters=FamilyName,HSE_VALUE,HSI48_VALUE,HSI_VALUE,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,SAI1Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.I2C1Freq_Value=48000000
+RCC.I2C3Freq_Value=48000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=48000000
+RCC.LPTIM2Freq_Value=48000000
+RCC.LPUART1Freq_Value=48000000
 RCC.LSCOPinFreq_Value=32000
-RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MSI_VALUE=4000000
-RCC.PLLPoutputFreq_Value=4571428.571428572
-RCC.PLLQoutputFreq_Value=16000000
-RCC.PLLRCLKFreq_Value=16000000
-RCC.PLLSAI1PoutputFreq_Value=4571428.571428572
-RCC.PLLSAI1QoutputFreq_Value=16000000
-RCC.PLLSAI1RoutputFreq_Value=16000000
-RCC.SAI1Freq_Value=4571428.571428572
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=32000000
-RCC.VCOSAI1OutputFreq_Value=32000000
-TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2N
+RCC.MCO1PinFreq_Value=48000000
+RCC.MSIClockRange=RCC_MSIRANGE_11
+RCC.MSI_VALUE=48000000
+RCC.PLLN=12
+RCC.PLLPoutputFreq_Value=27428571.42857143
+RCC.PLLQoutputFreq_Value=96000000
+RCC.PLLR=RCC_PLLR_DIV4
+RCC.PLLRCLKFreq_Value=48000000
+RCC.PLLSAI1PoutputFreq_Value=18285714.285714287
+RCC.PLLSAI1QoutputFreq_Value=64000000
+RCC.PLLSAI1RoutputFreq_Value=64000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
+RCC.PWRFreq_Value=48000000
+RCC.RNGFreq_Value=64000000
+RCC.SAI1Freq_Value=18285714.285714287
+RCC.SWPMI1Freq_Value=48000000
+RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USART1Freq_Value=48000000
+RCC.USART2Freq_Value=48000000
+RCC.VCOInputFreq_Value=16000000
+RCC.VCOOutputFreq_Value=192000000
+RCC.VCOSAI1OutputFreq_Value=128000000
+TIM1.IPParameters=Period,Prescaler
+TIM1.Period=60
+TIM1.Prescaler=3600
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
