--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -13,14 +13,13 @@ Mcu.IP3=TIM1
 Mcu.IPNb=4
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
-Mcu.Pin0=PB0
-Mcu.Pin1=PA9
-Mcu.Pin2=PA13 (JTMS-SWDIO)
-Mcu.Pin3=PA14 (JTCK-SWCLK)
-Mcu.Pin4=PB3 (JTDO-TRACESWO)
-Mcu.Pin5=VP_SYS_VS_Systick
-Mcu.Pin6=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=7
+Mcu.Pin0=PA9
+Mcu.Pin1=PA13 (JTMS-SWDIO)
+Mcu.Pin2=PA14 (JTCK-SWCLK)
+Mcu.Pin3=PB3 (JTDO-TRACESWO)
+Mcu.Pin4=VP_SYS_VS_Systick
+Mcu.Pin5=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=6
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -41,10 +40,7 @@ PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
-PA9.Locked=true
-PA9.Signal=GPIO_Output
-PB0.Locked=true
-PB0.Signal=GPIO_Output
+PA9.Signal=S_TIM1_CH2
 PB3\ (JTDO-TRACESWO).Mode=Trace_Asynchronous_SW
 PB3\ (JTDO-TRACESWO).Signal=SYS_JTDO-SWO
 PinOutPanel.RotationAngle=0
@@ -124,9 +120,12 @@ RCC.USART2Freq_Value=48000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=192000000
 RCC.VCOSAI1OutputFreq_Value=128000000
-TIM1.IPParameters=Period,Prescaler
-TIM1.Period=60
-TIM1.Prescaler=3600
+SH.S_TIM1_CH2.0=TIM1_CH2,PWM Generation2 CH2
+SH.S_TIM1_CH2.ConfNb=1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.IPParameters=Period,Prescaler,Channel-PWM Generation2 CH2
+TIM1.Period=1600
+TIM1.Prescaler=29999
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
