--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -8,28 +8,16 @@ CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=333.3333333333333
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,BS2
-Dma.Request0=TIM1_CH2
-Dma.RequestsNb=1
-Dma.TIM1_CH2.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM1_CH2.0.Instance=DMA1_Channel3
-Dma.TIM1_CH2.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.TIM1_CH2.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH2.0.Mode=DMA_CIRCULAR
-Dma.TIM1_CH2.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM1_CH2.0.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_HIGH
-Dma.TIM1_CH2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KCU6
 Mcu.Family=STM32L4
 Mcu.IP0=CAN1
-Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IPNb=6
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM1
+Mcu.IPNb=5
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA0
@@ -45,10 +33,9 @@ Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.12.1
+MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -58,7 +45,6 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
-NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
@@ -106,7 +92,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_CAN1_Init-CAN1-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
@@ -152,8 +138,11 @@ RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.VCOSAI1OutputFreq_Value=64000000
 TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N
+TIM1.IPParameters=Period,Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N,Pulse-PWM Generation2 CH2N,OCFastMode_PWM-PWM Generation2 CH2N
+TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
+TIM1.Period=10000
+TIM1.Pulse-PWM\ Generation2\ CH2N=5000
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
