--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -45,8 +45,8 @@ Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.12.1
+MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -152,8 +152,11 @@ RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.VCOSAI1OutputFreq_Value=64000000
 TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N
+TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N,Period,OCNPolarity_2,OCNIdleState_2
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
+TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
+TIM1.OCNPolarity_2=TIM_OCNPOLARITY_HIGH
+TIM1.Period=60-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
