--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -45,8 +45,8 @@ Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
-MxCube.Version=6.12.0
-MxDb.Version=DB.6.0.120
+MxCube.Version=6.12.1
+MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -58,7 +58,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
+NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
@@ -152,8 +154,12 @@ RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=96000000
 RCC.VCOSAI1OutputFreq_Value=64000000
 TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
-TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N
+TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N,Period,OCNPolarity_2,OCNIdleState_2,OCFastMode_PWM-PWM Generation2 CH2N
+TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
 TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
+TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
+TIM1.OCNPolarity_2=TIM_OCNPOLARITY_LOW
+TIM1.Period=60-1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
