Using static wrbuf

--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -14,7 +14,7 @@ Dma.TIM1_CH2.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH2.0.Instance=DMA1_Channel3
 Dma.TIM1_CH2.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.TIM1_CH2.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH2.0.Mode=DMA_CIRCULAR
+Dma.TIM1_CH2.0.Mode=DMA_NORMAL
 Dma.TIM1_CH2.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM1_CH2.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_HIGH
