--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -20,6 +20,7 @@ Dma.TIM1_CH2.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_HIGH
 Dma.TIM1_CH2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KCU6
 Mcu.Family=STM32L4
@@ -72,6 +73,8 @@ PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PB0.GPIOParameters=GPIO_Speed
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.Locked=true
 PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
