--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -30,7 +30,8 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IPNb=6
+Mcu.IP6=TIM6
+Mcu.IPNb=7
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA0
@@ -42,7 +43,8 @@ Mcu.Pin5=PA14 (JTCK-SWCLK)
 Mcu.Pin6=PB3 (JTDO-TRACESWO)
 Mcu.Pin7=VP_SYS_VS_Systick
 Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin9=VP_TIM6_VS_ClockSourceINT
+Mcu.PinsNb=10
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -111,7 +113,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_RTC_Init-RTC-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
@@ -163,9 +165,15 @@ TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
 TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
 TIM1.OCNPolarity_2=TIM_OCNPOLARITY_LOW
 TIM1.Period=60-1
+TIM6.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
+TIM6.Period=62500
+TIM6.Prescaler=767
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
