--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -31,11 +31,13 @@ Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
 Mcu.IP6=TIM6
-Mcu.IPNb=7
+Mcu.IP7=TIM7
+Mcu.IPNb=8
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA0
 Mcu.Pin1=PB0
+Mcu.Pin10=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PA11
 Mcu.Pin3=PA12
 Mcu.Pin4=PA13 (JTMS-SWDIO)
@@ -44,7 +46,7 @@ Mcu.Pin6=PB3 (JTDO-TRACESWO)
 Mcu.Pin7=VP_SYS_VS_Systick
 Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin9=VP_TIM6_VS_ClockSourceINT
-Mcu.PinsNb=10
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -65,6 +67,7 @@ NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
@@ -170,11 +173,16 @@ TIM6.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM6.Period=62500
 TIM6.Prescaler=767
 TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM7.IPParameters=Period,Prescaler
+TIM7.Period=49999
+TIM7.Prescaler=95
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
 isbadioc=false
