--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -14,12 +14,13 @@ Dma.TIM1_CH2.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH2.0.Instance=DMA1_Channel3
 Dma.TIM1_CH2.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.TIM1_CH2.0.MemInc=DMA_MINC_ENABLE
-Dma.TIM1_CH2.0.Mode=DMA_NORMAL
+Dma.TIM1_CH2.0.Mode=DMA_CIRCULAR
 Dma.TIM1_CH2.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM1_CH2.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_HIGH
 Dma.TIM1_CH2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32L431KCU6
 Mcu.Family=STM32L4
@@ -29,11 +30,14 @@ Mcu.IP2=NVIC
 Mcu.IP3=RCC
 Mcu.IP4=SYS
 Mcu.IP5=TIM1
-Mcu.IPNb=6
+Mcu.IP6=TIM6
+Mcu.IP7=TIM7
+Mcu.IPNb=8
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA0
 Mcu.Pin1=PB0
+Mcu.Pin10=VP_TIM7_VS_ClockSourceINT
 Mcu.Pin2=PA11
 Mcu.Pin3=PA12
 Mcu.Pin4=PA13 (JTMS-SWDIO)
@@ -41,7 +45,8 @@ Mcu.Pin5=PA14 (JTCK-SWCLK)
 Mcu.Pin6=PB3 (JTDO-TRACESWO)
 Mcu.Pin7=VP_SYS_VS_Systick
 Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
-Mcu.PinsNb=9
+Mcu.Pin9=VP_TIM6_VS_ClockSourceINT
+Mcu.PinsNb=11
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -61,6 +66,8 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM1_BRK_TIM15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_TRG_COM_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.TIM1_UP_TIM16_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
@@ -72,6 +79,8 @@ PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PB0.GPIOParameters=GPIO_Speed
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.Locked=true
 PB0.Mode=PWM Generation2 CH2N
 PB0.Signal=TIM1_CH2N
@@ -108,7 +117,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADCFreq_Value=32000000
 RCC.AHBFreq_Value=48000000
 RCC.APB1Freq_Value=48000000
@@ -160,9 +169,20 @@ TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
 TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
 TIM1.OCNPolarity_2=TIM_OCNPOLARITY_LOW
 TIM1.Period=60-1
+TIM6.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
+TIM6.Period=62500
+TIM6.Prescaler=767
+TIM6.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM7.IPParameters=Period,Prescaler
+TIM7.Period=49999
+TIM7.Prescaler=95
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
+VP_TIM7_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM7_VS_ClockSourceINT.Signal=TIM7_VS_ClockSourceINT
 board=custom
 isbadioc=false
