--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -7,7 +7,7 @@ CAN1.CalculateBaudRate=1000000
 CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=250.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler,Mode
-CAN1.Mode=CAN_MODE_LOOPBACK
+CAN1.Mode=CAN_MODE_NORMAL
 CAN1.Prescaler=12
 Dma.Request0=TIM1_CH2
 Dma.RequestsNb=1
@@ -73,6 +73,8 @@ NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.Mode=HSE-External-Clock-Source-for-LittleOrca
 PA0.Signal=RCC_CK_IN
+PA11.GPIOParameters=GPIO_PuPd
+PA11.GPIO_PuPd=GPIO_NOPULL
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN1_RX
 PA12.Mode=CAN_Activate
