Switch CAN prescaler to change baud rate to 1e6

--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -4,12 +4,12 @@ CAD.pinconfig=
 CAD.provider=
 CAN1.BS1=CAN_BS1_2TQ
 CAN1.BS2=CAN_BS2_1TQ
-CAN1.CalculateBaudRate=83333
-CAN1.CalculateTimeBit=12000
-CAN1.CalculateTimeQuantum=3000.0
+CAN1.CalculateBaudRate=1000000
+CAN1.CalculateTimeBit=1000
+CAN1.CalculateTimeQuantum=250.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler,Mode,BS2
 CAN1.Mode=CAN_MODE_NORMAL
-CAN1.Prescaler=12
+CAN1.Prescaler=1
 Dma.Request0=TIM1_CH2
 Dma.RequestsNb=1
 Dma.TIM1_CH2.0.Direction=DMA_MEMORY_TO_PERIPH
