--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -8,9 +8,10 @@ CAN1.CalculateTimeBit=1000
 CAN1.CalculateTimeQuantum=250.0
 CAN1.IPParameters=CalculateTimeQuantum,CalculateTimeBit,CalculateBaudRate,BS1,Prescaler,Mode
 CAN1.Mode=CAN_MODE_NORMAL
-CAN1.Prescaler=12
+CAN1.Prescaler=20
 Dma.Request0=TIM1_CH2
-Dma.RequestsNb=1
+Dma.Request1=TIM2_CH1
+Dma.RequestsNb=2
 Dma.TIM1_CH2.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM1_CH2.0.Instance=DMA1_Channel3
 Dma.TIM1_CH2.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
@@ -20,6 +21,15 @@ Dma.TIM1_CH2.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM1_CH2.0.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_HIGH
 Dma.TIM1_CH2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
+Dma.TIM2_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM2_CH1.1.Instance=DMA1_Channel5
+Dma.TIM2_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH1.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_CH1.1.Mode=DMA_NORMAL
+Dma.TIM2_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_CH1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM2_CH1.1.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -38,18 +48,19 @@ Mcu.IPNb=9
 Mcu.Name=STM32L431K(B-C)Ux
 Mcu.Package=UFQFPN32
 Mcu.Pin0=PA0
-Mcu.Pin1=PB0
-Mcu.Pin10=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin11=VP_TIM7_VS_ClockSourceINT
-Mcu.Pin2=PA11
-Mcu.Pin3=PA12
-Mcu.Pin4=PA13 (JTMS-SWDIO)
-Mcu.Pin5=PA14 (JTCK-SWCLK)
-Mcu.Pin6=PB3 (JTDO-TRACESWO)
-Mcu.Pin7=VP_SYS_VS_Systick
-Mcu.Pin8=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin9=VP_TIM2_VS_ClockSourceINT
-Mcu.PinsNb=12
+Mcu.Pin1=PA5
+Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin12=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin2=PB0
+Mcu.Pin3=PA11
+Mcu.Pin4=PA12
+Mcu.Pin5=PA13 (JTMS-SWDIO)
+Mcu.Pin6=PA14 (JTCK-SWCLK)
+Mcu.Pin7=PB3 (JTDO-TRACESWO)
+Mcu.Pin8=VP_SYS_VS_Systick
+Mcu.Pin9=VP_TIM1_VS_ClockSourceINT
+Mcu.PinsNb=13
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L431KCUx
@@ -58,6 +69,7 @@ MxDb.Version=DB.6.0.121
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.CAN1_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
+NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -86,6 +98,8 @@ PA13\ (JTMS-SWDIO).Mode=Trace_Asynchronous_SW
 PA13\ (JTMS-SWDIO).Signal=SYS_JTMS-SWDIO
 PA14\ (JTCK-SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK-SWCLK).Signal=SYS_JTCK-SWCLK
+PA5.Locked=true
+PA5.Signal=S_TIM2_CH1
 PB0.GPIOParameters=GPIO_Speed
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB0.Locked=true
@@ -125,56 +139,62 @@ ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
 ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM6_Init-TIM6-false-HAL-true,7-MX_TIM7_Init-TIM7-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true
-RCC.ADCFreq_Value=192000000
-RCC.AHBFreq_Value=48000000
-RCC.APB1Freq_Value=48000000
-RCC.APB1TimFreq_Value=48000000
-RCC.APB2Freq_Value=48000000
-RCC.APB2TimFreq_Value=48000000
-RCC.CortexFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
+RCC.ADCFreq_Value=32000000
+RCC.AHBFreq_Value=80000000
+RCC.APB1Freq_Value=80000000
+RCC.APB1TimFreq_Value=80000000
+RCC.APB2Freq_Value=80000000
+RCC.APB2TimFreq_Value=80000000
+RCC.CortexFreq_Value=80000000
+RCC.FCLKCortexFreq_Value=80000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
+RCC.HCLKFreq_Value=80000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=48000000
-RCC.I2C3Freq_Value=48000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
-RCC.LPTIM1Freq_Value=48000000
-RCC.LPTIM2Freq_Value=48000000
-RCC.LPUART1Freq_Value=48000000
+RCC.I2C1Freq_Value=80000000
+RCC.I2C3Freq_Value=80000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,MSI_VALUE,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSourceVirtual,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=80000000
+RCC.LPTIM2Freq_Value=80000000
+RCC.LPUART1Freq_Value=80000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=48000000
+RCC.MCO1PinFreq_Value=80000000
 RCC.MSIClockRange=RCC_MSIRANGE_11
 RCC.MSI_VALUE=48000000
-RCC.PLLPoutputFreq_Value=54857142.85714286
-RCC.PLLQoutputFreq_Value=192000000
-RCC.PLLRCLKFreq_Value=192000000
-RCC.PLLSAI1PoutputFreq_Value=54857142.85714286
-RCC.PLLSAI1QoutputFreq_Value=192000000
-RCC.PLLSAI1RoutputFreq_Value=192000000
-RCC.PWRFreq_Value=48000000
-RCC.RNGFreq_Value=192000000
-RCC.SAI1Freq_Value=54857142.85714286
-RCC.SWPMI1Freq_Value=48000000
-RCC.SYSCLKFreq_VALUE=48000000
-RCC.USART1Freq_Value=48000000
-RCC.USART2Freq_Value=48000000
-RCC.VCOInputFreq_Value=48000000
-RCC.VCOOutputFreq_Value=384000000
-RCC.VCOSAI1OutputFreq_Value=384000000
+RCC.PLLN=20
+RCC.PLLPoutputFreq_Value=22857142.85714286
+RCC.PLLQoutputFreq_Value=80000000
+RCC.PLLRCLKFreq_Value=80000000
+RCC.PLLSAI1PoutputFreq_Value=9142857.142857144
+RCC.PLLSAI1QoutputFreq_Value=32000000
+RCC.PLLSAI1RoutputFreq_Value=32000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PWRFreq_Value=80000000
+RCC.RNGFreq_Value=32000000
+RCC.SAI1Freq_Value=9142857.142857144
+RCC.SWPMI1Freq_Value=80000000
+RCC.SYSCLKFreq_VALUE=80000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.USART1Freq_Value=80000000
+RCC.USART2Freq_Value=80000000
+RCC.VCOInputFreq_Value=8000000
+RCC.VCOOutputFreq_Value=160000000
+RCC.VCOSAI1OutputFreq_Value=64000000
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
 TIM1.Channel-PWM\ Generation2\ CH2N=TIM_CHANNEL_2
 TIM1.IPParameters=Channel-PWM Generation2 CH2N,OCMode_PWM-PWM Generation2 CH2N,Period,OCNPolarity_2,OCNIdleState_2,OCFastMode_PWM-PWM Generation2 CH2N
-TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_ENABLE
-TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM2
+TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2N=TIM_OCFAST_DISABLE
+TIM1.OCMode_PWM-PWM\ Generation2\ CH2N=TIM_OCMODE_PWM1
 TIM1.OCNIdleState_2=TIM_OCNIDLESTATE_SET
 TIM1.OCNPolarity_2=TIM_OCNPOLARITY_LOW
-TIM1.Period=60-1
-TIM2.IPParameters=Period
-TIM2.Period=480000
+TIM1.Period=96
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Period,Channel-PWM Generation1 CH1
+TIM2.Period=96
 TIM6.IPParameters=TIM_MasterOutputTrigger,Prescaler,Period
 TIM6.Period=62500
 TIM6.Prescaler=767
