--- a/efs-can-lighting.ioc
+++ b/efs-can-lighting.ioc
@@ -23,9 +23,9 @@ Dma.TIM1_CH2.0.Priority=DMA_PRIORITY_HIGH
 Dma.TIM1_CH2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.TIM2_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM2_CH1.1.Instance=DMA1_Channel5
-Dma.TIM2_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_CH1.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.TIM2_CH1.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_CH1.1.Mode=DMA_NORMAL
+Dma.TIM2_CH1.1.Mode=DMA_CIRCULAR
 Dma.TIM2_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.TIM2_CH1.1.PeriphInc=DMA_PINC_DISABLE
 Dma.TIM2_CH1.1.Priority=DMA_PRIORITY_HIGH
